--- a/cpp/texture_share_vk/config.h.in
+++ b/cpp/texture_share_vk/config.h.in
@@ -3,3 +3,4 @@
 #define VK_SERVER_EXECUTABLE            "@VK_SERVER_EXECUTABLE@"
 #define VK_SERVER_DEFAULT_LOCKFILE_PATH "@TSV_VK_SERVER_DEFAULT_LOCKFILE_PATH@"
 #define VK_SERVER_DEFAULT_SOCKET_PATH   "@TSV_VK_SERVER_DEFAULT_SOCKET_PATH@"
+#define VK_SERVER_DEFAULT_SHMEM_PREFIX  "@TSV_VK_SERVER_DEFAULT_SHMEM_PREFIX@"
