--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,12 +180,13 @@ target_link_libraries(TextureShareGlClientCpp
                       PUBLIC ${PROJECT_NAME}::TextureShareGlClient)
 
 # Lazy Test Linker. Remove later
-add_executable(test_gl_client "cpp/test_main.cpp")
-target_link_libraries(test_gl_client ${PROJECT_NAME}::TextureShareGlClientCpp
-                      OpenGL::GL)
-add_executable(test_vk_client "cpp/test_main.cpp")
-target_link_libraries(test_vk_client ${PROJECT_NAME}::TextureShareVkClientCpp
-                      Vulkan::Vulkan)
+#add_executable(test_gl_client "cpp/test_main.cpp")
+#target_link_libraries(test_gl_client ${PROJECT_NAME}::TextureShareGlClientCpp
+#                      OpenGL::GL)
+#add_executable(test_vk_client "cpp/test_main.cpp")
+#target_link_libraries(test_vk_client ${PROJECT_NAME}::TextureShareVkClientCpp
+#                      Vulkan::Vulkan)
+
 
 # ##############################################################################
 # Install library files
